GoSafe Metadata/force-app/main/default/objects/Insurance_Documentation__c/Insurance_Documentation__c.object-meta.xml
<CustomObject>
    <label>Insurance Documentation</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Insurance Documentation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Documentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>