GoSafe Metadata/force-app/main/default/objects/Insurance_Documentation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Documentations</relationshipLabel>
    <relationshipName>Insurance_Documentations</relationshipName>
    <type>Lookup</type>
</CustomField>