GoSafe Metadata/force-app/main/default/objects/Insurance_Documentation__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <description>Contains the link to the record</description>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; Id,
   TEXT(Type__c),
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folder</label>
    <type>Text</type>
</CustomField>