GoSafe Metadata/force-app/main/default/objects/Insurance_Documentation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENDORSEMENT</fullName>
            </value>
            <value>
                <fullName>DOCUMENTATION</fullName>
            </value>
            <value>
                <fullName>COMM QUOTE APP</fullName>
            </value>
            <value>
                <fullName>BIND PROCESS</fullName>
            </value>
            <value>
                <fullName>AFTERSALE</fullName>
            </value>
            <value>
                <fullName>FINANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>